@@ -1,6 +1,5 @@
 package com.ust.pos.api;
 
-
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -14,11 +13,10 @@ public class BaseController {
     protected Pageable getPageable(int pageNumber, int pageSize, String sortDirection, String... sort) {
         Sort.Direction direction = sortDirection.equalsIgnoreCase("asc") ? Sort.Direction.ASC : Sort.Direction.DESC;
         List<Sort.Order> orders = new ArrayList<>();
-        Arrays.stream(sort).collect(Collectors.toList()).forEach(field -> {
+        Arrays.stream(sort).toList().forEach(field -> {
             Sort.Order order = new Sort.Order(direction, field);
             orders.add(order);
         });
         return PageRequest.of(pageNumber, pageSize, Sort.by(orders));
     }
 }
-
